hphp/test/zend/good/Zend/tests/traits/static_004.php
<?php

	trait TestTrait {
		public static function __callStatic($name, $arguments) {
			return $name;
		}
	}

	class A {
		use TestTrait;
	}

	echo A::Test();

?>